fixed the gaps along all the sections

--- a/src/components/ComponentStyles.css
+++ b/src/components/ComponentStyles.css
@@ -100,7 +100,7 @@ h3 {
 
 .about-napollo { 
   position: relative;
-  top: 65px;
+  top: 60px;
   height: auto;
   background: #000;
   padding: 23% 20px 50px 20px;
@@ -775,7 +775,7 @@ h3 {
 
 .choose-plan {
   position: relative;
-  top: 70px;
+  top: 60px;
   background: #000;
   padding-top: 150px;
   padding-bottom: 150px;
@@ -1264,7 +1264,7 @@ h3 {
 /*******************Download App***************************/
 .download-app {
   position: relative;
-  top: 70px;
+  top: 60px;
   background: #000;
   padding: 50px;
 }
@@ -1348,7 +1348,7 @@ h3 {
 /*********************Footer*******************************/
 .footer {
   position: relative;
-  top: 70px;
+  top: 60px;
   background: #1a1a1a;
 }
 
